--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,9 @@ h6 {
 body {
   font-family: var(--font-secondary);
 }
+
+.prose {
+  align-content: center;
+  align-items: center;
+  width: 90vw;
+}
